[package]
name = "jeremy-bearimy"
version = "0.1.0"
edition = "2024"

[features]
dev_tools = ["bevy_egui", "bevy-inspector-egui", "egui_extras", "rfd"]

[dependencies]
bevy = "0.16.1"
bevy_enhanced_input = "0.14.1"
serde = "1.0.219"

# dev tools
bevy_egui = { version = "0.35.1", optional = true }
bevy-inspector-egui = { version = "0.32.0", optional = true }
egui_extras = { version = "0.31.0", optional = true }
rfd = { version = "0.15.4", optional = true }

[[bin]]
name = "map-editor"
required-features = ["dev_tools"]

[lints.clippy]
too_many_arguments = "allow"
