[package]
name = "jeremy-bearimy"
version = "0.1.0"
edition = "2024"
default-run = "jeremy-bearimy"

[features]
dev_tools = ["bevy_egui", "bevy-inspector-egui", "egui_extras", "rfd"]

[dependencies]
bevy = "0.16.1"
bevy_common_assets = { version = "0.13.0", features = ["ron"] }
bevy_enhanced_input = "0.15.2"
bevy-persistent = { version = "0.8.0", features = ["ron"] }
serde = "1.0.219"
indexmap = {  version = "2.10.0", features = ["serde"] }
rand = "0.9.2"
chrono = {  version = "0.4.41", features = ["serde"] }

# dev tools
bevy_egui = { version = "0.35.1", optional = true }
bevy-inspector-egui = { version = "0.32.0", optional = true }
egui_extras = { version = "0.31.0", optional = true }
rfd = { version = "0.15.4", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "6.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.13.1", default-features = false, features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[[bin]]
name = "map-editor"
required-features = ["dev_tools"]

[lints.clippy]
too_many_arguments = "allow"
